@@ -458,8 +458,10 @@ static const char help_printf_long[] =
         "          define allocation classes.\n"
         "          CLASSDEF format is 'TYPE:ID=DEFINITION;'.\n"
         "          To specify specific resources 'TYPE[@RESOURCE_ID]:ID=DEFINITION;'.\n"
-        "          Example: 'llc:0=0xffff;llc:1=0x00ff;llc@0-1:2=0xff00',\n"
-	"                   'llc:0d=0xfff;llc:0c=0xfff00;l2:2=0x3f;l2@2:1=0xf'.\n"
+        "          Examples: 'llc:0=0xffff;llc:1=0x00ff;llc@0-1:2=0xff00',\n"
+	"                    'llc:0d=0xfff;llc:0c=0xfff00',\n"
+        "                    'l2:2=0x3f;l2@2:1=0xf',\n"
+        "                    'mba:1=30;mba@1:3=80'.\n"
         "  -a CLASS2CORE, --alloc-assoc=CLASS2CORE\n"
         "          associate cores with an allocation class.\n"
         "          CLASS2CORE format is 'TYPE:ID=CORE_LIST'.\n"
